# Algs_in_cpp

./: .gitignore  CMakeLists.txt  README.md  mainConsole.cpp
include/: comparable.h  dictionary.h  sequential_search_dictionary.h  symbol_table.h
